tests/models/enum/named/u64/fail/max_items.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(max_items = 2)]
        u64
    ),
}
fn main() {}
